# ai-doc-processing

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
ai-core/embeddings/: generate.ts
ai-core/nlp-models/: model-registry.json  ner.ts  tokenizer.ts
ai-core/ocr-engine/: Cargo.toml  build.sh
ai-core/ocr-engine/src/: lib.rs
client/: .env.local  index.tsx  jest.config.ts  tsconfig.json  vite.config.ts
client/src/__mocks__/workers/: ocr.worker.ts
client/src/components/DocumentUpload/: DragDropZone.tsx
client/src/hooks/: useDocumentProcessor.ts  useOCR.ts  useWasm.ts
client/src/lib/workers/: image.worker.ts  ocr.worker.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md
infrastructure/docker/compose/: db.yml
infrastructure/prometheus/: monitoring.yml
infrastructure/scripts/: build.sh
my-turborepo/: package-lock.json  package.json
server/: package-lock.json  package.json
server/src/: app.module.ts
server/src/common/middlewares/: security.middleware.ts
server/src/common/pipes/: document-validation.pipe.ts
server/src/dto/: document-processing.dto.ts
server/src/modules/ai/: ai.module.ts  ai.service.ts  gpt.service.ts  vector.service.ts
server/src/modules/document/: document.entity.ts
shared/config/: env.ts
shared/error-handling/: error-tracker.ts
shared/types/: document.ts
tests/unit/frontend/: document.test.ts
tools/benchmark/: load_test.py
tools/model-converter/: pytorch_to_onnx.py
